<package>
  <name>motoman_mh6_support</name>
  <version>1.0.0</version>
  <description>
    <p>URDF Description package for motoman_mh6</p>
    <p>This package contains configuration data, 3D models and launch files
for motoman_mh6 robot</p>
  </description>
  <author>SINAI ARANDA</author>
  <maintainer email="sinai.aranda@cidesi.edu.mx" />
  <license>BSD</license>
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roslaunch</build_depend>
  <run_depend>robot_state_publisher</run_depend>
  <run_depend>rviz</run_depend>
  <run_depend>joint_state_publisher</run_depend>
  <run_depend>gazebo</run_depend>
  <export>
    <architecture_independent />
  </export>
</package>
